objects/Evaluation__c.object
<CustomObject>
    <description>Represents an evaluation of a seller vehicle.</description>
    <fields>
        <fullName>Base_Evaluated_By__c</fullName>
        <description>Base UserID for this (migrated) evaluation</description>
        <label>Base Evaluated By</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Scheduled_By__c</fullName>
        <description>Base UserID of user who scheduled this (migrated) Evaluation.</description>
        <label>Base Scheduled By</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Through__c</fullName>
        <label>Booked Through</label>
        <picklist>
            <picklistValues>
                <fullName>Automated pickup from queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email from queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call into queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound phone call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound email campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluated_At_Date_Time__c</fullName>
        <formula>Evaluated_At__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluated At (Date/Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evaluated_At__c</fullName>
        <label>Evaluated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evaluated_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_By_Text__c</fullName>
        <formula>Evaluated_By_ID__r.FirstName &amp; &quot; &quot; &amp; Evaluated_By_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation By Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluation Survey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shift_Survey__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Evaluation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shift_Survey__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Calendar_Notes__c</fullName>
        <label>Inside Sales Calendar Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_At__c</fullName>
        <description>Time at which this object was migrated</description>
        <label>Migrated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Next_Steps_After_Evaluation__c</fullName>
        <inlineHelpText>- How did the evaluation go?
- Are there any outstanding questions and issues?
- What are the next steps? By who? When?</inlineHelpText>
        <label>Next Steps After Evaluation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_The_Spot_Pickup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked only if the vehicle was picked up during the eval.  (Waves the Pick-Up Fee.)</description>
        <inlineHelpText>This checkbox should be checked only if the vehicle was picked up during the eval.  (Waves the Pick-Up Fee.)</inlineHelpText>
        <label>On The Spot Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originally_Requested_At__c</fullName>
        <label>Originally Requested At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pickup_Probability__c</fullName>
        <label>Pickup Probability</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Seller_Opportunity_ID__r.Region_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Evaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_By_Text__c</fullName>
        <formula>Scheduled_By_ID__r.FirstName &amp; &quot; &quot; &amp;  Scheduled_By_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled By Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Drop_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked if the vehicle is dropped off by the customer at the hub.  (Waives the Pick Up Fee.)</description>
        <inlineHelpText>This checkbox should be checked if the vehicle is dropped off by the customer at the hub.  (Waives the Pick Up Fee.)</inlineHelpText>
        <label>Seller Drop-Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller_Opportunity_ID__c</fullName>
        <label>Seller Opportunity ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value is not a Seller Opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Seller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Evaluation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>